change exclude option to query parameter
